--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "swiper": "^11.1.0"  // <--- Add this line
   },
   "scripts": {
     "start": "react-scripts start",
