--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.3.0",
-    "swiper": "^11.1.0"  // <--- Add this line
+    "swiper": "^11.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
